fix z-index

--- a/src/app/components/ribbon/ribbon.component.scss
+++ b/src/app/components/ribbon/ribbon.component.scss
@@ -5,7 +5,7 @@
   text-align: center;
   transition: .3s;
   width: 200px;
-  z-index: 20;
+  z-index: 101;
 
   &--top-right {
     top: 25px;
